Version 5.0.3
- Fixed off-by-one error in fs9p code
- Fixed an off-by-one error in BASIC numeric formatting
- Fixed a bad calculation in p2_clock.h

Version 5.0.2
- Added "noinline" attribute
- Added a warning for some non-terminating loops
- Fixed a compiler warning in ff.cc
- Fixed a bug with returning structures in C
- Fixed an optimizer bug with trying to replace ptra++
- Fixed an overly aggressive loop reduction optimization
- Made BASIC open command use "throw" to report errors

Version 5.0.1
- Added getms() and getus() for BASIC
- Allow ptra++ in BASIC assembly
- Allow use of constants from other objects in inline assembly
- Allow access to array member variables in Spin
- Convert "ret" in inline assembly to a jump to the end of it
- Fixed a C parser crash
- Fixed a problem with padding C structs
- Fixed a bug parsing strings in C __pasm
- Provided separate namespace for labels in C
- Removed support for Rev A silicon (it was not working anyway)

Version 5.0.0
- Renamed "fastspin" to "flexspin"
- Added "flexcc" compiler front end
- Added --version flag to fastspin
- Added asin(), acos(), atan(), atan2() to BASIC
- Fixed BASIC ^ operator when used with --fixedreal
- Made sin() and cos() work with --fixedreal
- New atan2() implementation using the CORDIC on P2

Version 4.5.0
- Added a warning for C functions with mismatched parameters (it used to silently accept this)
- Added "." character for PRINT USING in BASIC
- Added support for binary floating point constants in C
- Added __builtin_clz() for C
- Added gettimeofday() / settimeofday()
- Added scanf() family of functions for C
- Allowed empty FOR loops in BASIC
- Fixed a number of problems in C struct initialization
- Fixed printing floats in C when --fixedreal is given
- Fixed BASIC FOR loops with negative floating point steps
- Fixed binary and hex constants in C to be unsigned when appropriate
- Fixed a problem with passing small arrays as parameters in C
- Fixed ^ in BASIC